<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>edu.esprit</groupId>
	<artifactId>TimeLine</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>TimeLine</name>
	<contributors>
		<contributor>
			<email>wael.aniba@esprit.tn</email>
			<name>wael.aniba</name>
			<organization>ESPRIT</organization>
			<organizationUrl>http://www.esprit.ens.tn/</organizationUrl>
		</contributor>
	</contributors>
	<inceptionYear>2015</inceptionYear>
	<description>MAVEN REPORTING AND AUDIT EXAMPLE</description>

	<properties>
		<maven.compiler.source>1.7</maven.compiler.source>
		<maven.compiler.target>1.7</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.autorun.plugin.version>1.8</maven.autorun.plugin.version>
		<junit.version>4.11</junit.version>
		<jacoco.version>0.7.5.201505241946</jacoco.version>
		<pitest.version>1.1.7</pitest.version>
		<checkstyle.version>2.16</checkstyle.version>
		<javadoc.version>2.10.3</javadoc.version>
		<overview.version>1.6</overview.version>
		<findbugs.version>3.0.2</findbugs.version>
		<taglist.version>2.4</taglist.version>
		<cobertura.version>2.6</cobertura.version>
		<jdepend.version>2.0</jdepend.version>
		<pmd.version>3.5</pmd.version>
		<dashboard.version>1.0.0-beta-1</dashboard.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-antrun-plugin</artifactId>
				<version>${maven.autorun.plugin.version}</version>
				<executions>
					<execution>
						<phase>prepare-package</phase>
						<configuration>
							<target unless="maven.info.skip">
								<echo
									message="------------------------------------------------------------" />
								<echo message="PROJECT DEPENDENCIES VERSIONS" />
								<echo
									message="------------------------------------------------------------" />
								<echo> - junit.version: ${junit.version} </echo>
								<echo> - jacoco.version: ${jacoco.version} </echo>
								<echo> - checkstyle.version: ${checkstyle.version} </echo>
								<echo> - javadoc.version: ${javadoc.version} </echo>
								<echo> - overview.version: ${overview.version} </echo>
								<echo> - findbugs.version: ${findbugs.version} </echo>
								<echo> - taglist.version: ${taglist.version} </echo>
								<echo> - cobertura.version: ${cobertura.version} </echo>
								<echo> - jdepend.version: ${jdepend.version} </echo>
								<echo> - pmd.version: ${pmd.version} </echo>
								<echo> - dashboard.version: ${dashboard.version} </echo>
								<echo
									message="------------------------------------------------------------" />
								<echo message="To skip this part, just call mvn -Dmaven.info.skip=true" />
								<echo
									message="------------------------------------------------------------" />
							</target>
						</configuration>
						<goals>
							<goal>run</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<profiles>

		<profile>
			<id>frequentBuild</id>
			<build>
				<defaultGoal>clean install help:active-profiles</defaultGoal>
			</build>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
		</profile>

		<profile>
			<id>nightlyBuild</id>
			<!-- MUST INCREASE JVM HEAP SIZE USE VM ARGS WHEN RUNNING THE BUILD: -Xms512m 
				-Xmx1152m -XX:MaxPermSize=256m -XX:MaxNewSize=256m -->
			<build>
				<defaultGoal>clean install site help:active-profiles</defaultGoal>
				<plugins>
					<plugin>
						<groupId>org.jacoco</groupId>
						<artifactId>jacoco-maven-plugin</artifactId>
						<version>${jacoco.version}</version>
						<executions>
							<execution>
								<id>init</id>
								<goals>
									<goal>prepare-agent</goal>
								</goals>
							</execution>
							<execution>
								<id>report</id>
								<phase>prepare-package</phase>
								<goals>
									<goal>report</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>2.19</version>
						<configuration>
							<argLine>${argLine}</argLine>
							<testFailureIgnore>true</testFailureIgnore>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.pitest</groupId>
						<artifactId>pitest-maven</artifactId>
						<version>${pitest.version}</version>
						<executions>
							<execution>
								<id>mutationCoverage</id>
								<phase>prepare-package</phase>
								<goals>
									<goal>mutationCoverage</goal>
								</goals>
								<configuration>
									<targetClasses>
										<param>app.*</param>
									</targetClasses>
									<targetTests>
										<param>app.*</param>
									</targetTests>
									<mutators>
										<mutator>INCREMENTS</mutator>
										<mutator>RETURN_VALS</mutator>
										<mutator>MATH</mutator>
										<mutator>NEGATE_CONDITIONALS</mutator>
										<mutator>INVERT_NEGS</mutator>
										<mutator>CONDITIONALS_BOUNDARY</mutator>
										<mutator>CONSTRUCTOR_CALLS</mutator>
										<mutator>INLINE_CONSTS</mutator>
										<mutator>REMOVE_CONDITIONALS</mutator>
										<mutator>CONSTRUCTOR_CALLS</mutator>
										<mutator>NON_VOID_METHOD_CALLS</mutator>
									</mutators>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-checkstyle-plugin</artifactId>
						<version>${checkstyle.version}</version>
						<executions>
							<execution>
								<id>validate</id>
								<phase>prepare-package</phase>
								<goals>
									<goal>checkstyle</goal>
								</goals>
								<configuration>
									<!-- if custom checkstyle rules definition -->
									<!-- <configLocation>checkstyle.xml</configLocation> -->
									<encoding>UTF-8</encoding>
									<consoleOutput>true</consoleOutput>
									<failsOnError>false</failsOnError>
									<linkXRef>false</linkXRef>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>${javadoc.version}</version>
						<configuration>
							<show>private</show>
							<nohelp>true</nohelp>
						</configuration>
						<executions>
							<execution>
								<id>generateJavaDoc</id>
								<phase>prepare-package</phase>
								<goals>
									<goal>javadoc</goal>
								</goals>
							</execution>
						</executions>
					</plugin>

					<plugin>
						<groupId>com.googlecode.maven-overview-plugin</groupId>
						<artifactId>maven-overview-plugin</artifactId>
						<version>${overview.version}</version>
						<executions>
							<execution>
								<id>processOverview</id>
								<phase>prepare-package</phase>
								<goals>
									<goal>overview</goal>
								</goals>
							</execution>
						</executions>
					</plugin>

					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>dashboard-maven-plugin</artifactId>
						<version>${dashboard.version}</version>
						<executions>
							<execution>
								<id>generateDAshboard</id>
								<phase>prepare-package</phase>
								<goals>
									<goal>dashboard</goal>
								</goals>
							</execution>
						</executions>
					</plugin>

					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-pmd-plugin</artifactId>
						<version>3.5</version>
						<executions>
							<execution>
								<id>processPMD</id>
								<phase>prepare-package</phase>
								<goals>
									<goal>pmd</goal>
									<goal>cpd</goal>
								</goals>
							</execution>
						</executions>
					</plugin>

				</plugins>
			</build>

			<reporting>
				<plugins>

					<plugin>
						<groupId>org.pitest</groupId>
						<artifactId>pitest-maven</artifactId>
						<configuration>
							<skip>false</skip>
							<!-- <reportsDirectory>${project.build.directory}/pit-reports</reportsDirectory> -->
							<sourceDataFormats>
								<sourceDataFormat>HTML</sourceDataFormat>
							</sourceDataFormats>
							<siteReportName>PIT REPORT</siteReportName>
							<siteReportDescription>PIT REPORT ON PROJECT
								${project.artifactId}</siteReportDescription>
							<!-- <siteReportDirectory>pit-reports</siteReportDirectory> -->
						</configuration>
						<reportSets>
							<reportSet>
								<reports>
									<report>report</report>
								</reports>
							</reportSet>
						</reportSets>
					</plugin>

					<plugin>
						<groupId>org.jacoco</groupId>
						<artifactId>jacoco-maven-plugin</artifactId>
					</plugin>

					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-checkstyle-plugin</artifactId>
						<reportSets>
							<reportSet>
								<reports>
									<report>checkstyle</report>
								</reports>
							</reportSet>
						</reportSets>
					</plugin>

					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<configuration>
							<show>public</show>
						</configuration>
					</plugin>

					<plugin>
						<groupId>com.googlecode.maven-overview-plugin</groupId>
						<artifactId>maven-overview-plugin</artifactId>
						<version>${overview.version}</version>
					</plugin>

					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>findbugs-maven-plugin</artifactId>
						<version>${findbugs.version}</version>
					</plugin>

					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>cobertura-maven-plugin</artifactId>
						<version>${cobertura.version}</version>
					</plugin>

					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>taglist-maven-plugin</artifactId>
						<version>${taglist.version}</version>
					</plugin>

					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>jdepend-maven-plugin</artifactId>
						<version>${jdepend.version}</version>
					</plugin>

					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-pmd-plugin</artifactId>
						<version>${pmd.version}</version>
					</plugin>

					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>dashboard-maven-plugin</artifactId>
						<version>${dashboard.version}</version>
					</plugin>

				</plugins>
			</reporting>

		</profile>
	</profiles>


</project>